CHANGES IN FLTK 1.3.0

	- Fixed X server "lock", if a modal dialog window is opened
	  while a menu is active (STR #1986)
	- Updated mirror sites in documentation (STR #2220)
	- Setting a default font for Xft (STR #2216)
	- Temporarily limited builds to 32-bit on OX S to stay
	  compatible to Snow Leopard
	- Fixed Windows compile bug with "#define USE_COLORMAP 0"
	  (STR #2241)
	- Fixed glibc 2.10 compiler problems (Fedora 11 and others)
	  with scandir() and strchr() (STR #2222)
	- Corrected const methods of Fl_Text_{Buffer|Display|Selection}
	  to be declared const, corrected an Fl_Text_Buffer attrib. typo
	- Fixed OpenGL shared context handling (STR #2135)
	- Fixed gray-scale images with alpha channel (STR #2105)
	- Fixed unexpected shortcut behavior for Win32 (STR #2199)
	- Fixed documentation for Fl_Progress (STR #2209)
	- Fluid printing used wrong colors under Windows (STR #2195)
	- Updated documentation for Fl_Input_
	- Fixed fl_draw_image to obey the alpha channel, hoping that 
	  this has no adverse effect on existing software (OS X only)
	- Added OS X cursor control to Fl_Input (STR #2169)
	- Fix for multiple popups, when dragging and calling fl_alert()
	  and friends from the callback (STR #2159)
	- Avoiding crashes for recursive common dialogs (this does not 
	  fix the issue at hand yet) (STR #1986, 2150)
	- Fixed control key keycodes with modifiers on OS X
	- Added menu shortcut alignment for OS X
	- Fixed bad system menu hadling in OS X (STR #2153)
	- Fixed File Input mouse pointer dragging (STR #2181)
	- Added alternative text input awareness on OS X 
	- Fixed 'del' keycode on OS X (must be verified for all keyboards)
	- Fixed OS X support for sending and receiving dnd data as utf8
	- Added drop box to utf8 test that will show the utf8 encoding
	  for the first dropped character
	- Restructured the unittest application
	- Updated the bundled libpng to v1.2.35 (released 18 Feb. 2009)
	- Fl_Preferences.H now doesn't include windows.h any more